[gd_scene load_steps=22 format=3 uid="uid://ci7hch2g1bwbd"]

[ext_resource type="Script" path="res://player/gold_knight.gd" id="1_kjr13"]
[ext_resource type="Texture2D" uid="uid://c1cwkkv6hiohc" path="res://arts/Gold Knight.png" id="1_xuauw"]
[ext_resource type="PackedScene" uid="uid://pdi3yvqkf02t" path="res://weapons/sword.tscn" id="3_frqhx"]
[ext_resource type="Script" path="res://player/weapon.gd" id="3_pe271"]
[ext_resource type="Texture2D" uid="uid://dan8gry2a42st" path="res://arts/LifeBarMiniUnder.png" id="5_q58xe"]
[ext_resource type="Texture2D" uid="uid://chcj4k0xkkeky" path="res://arts/LifeBarMiniProgress.png" id="6_iye2v"]

[sub_resource type="Animation" id="Animation_ex63l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8wew5"]
resource_name = "hurtBlink"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.470588), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_asrja"]
_data = {
"RESET": SubResource("Animation_ex63l"),
"hurtBlink": SubResource("Animation_8wew5")
}

[sub_resource type="Animation" id="Animation_ey2w2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0944]
}

[sub_resource type="Animation" id="Animation_ki44n"]
resource_name = "attackDown"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(10, 0), Vector2(0, 5), Vector2(-10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0944, 4.18879]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(0, 5), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_th2gw"]
resource_name = "attackLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-10, -10), Vector2(-10, -5), Vector2(-10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.523599, -2.61799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(2, 4), Vector2i(2, 5), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_fj42a"]
resource_name = "attackRight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(10, -10), Vector2(10, -5), Vector2(10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.523599, 2.61799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(3, 4), Vector2i(3, 5), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_yravu"]
resource_name = "attackUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-10, -10), Vector2(0, -15), Vector2(10, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.0472, 1.0472]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(1, 4), Vector2i(1, 5), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_pyluc"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_0rd0d"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_ad7tl"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_32vwe"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qcxt1"]
_data = {
"RESET": SubResource("Animation_ey2w2"),
"attackDown": SubResource("Animation_ki44n"),
"attackLeft": SubResource("Animation_th2gw"),
"attackRight": SubResource("Animation_fj42a"),
"attackUp": SubResource("Animation_yravu"),
"walkDown": SubResource("Animation_pyluc"),
"walkLeft": SubResource("Animation_0rd0d"),
"walkRight": SubResource("Animation_ad7tl"),
"walkUp": SubResource("Animation_32vwe")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87jg6"]
size = Vector2(12, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_2hamg"]
radius = 8.0

[node name="goldKnight" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 9
collision_mask = 9
script = ExtResource("1_kjr13")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture_filter = 1
texture = ExtResource("1_xuauw")
offset = Vector2(0, -8)
hframes = 4
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 15.0
color = Color(1, 0, 0, 0)

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_asrja")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qcxt1")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_87jg6")

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_2hamg")

[node name="weapon" type="Node2D" parent="."]
position = Vector2(10, 0)
rotation = 2.0944
script = ExtResource("3_pe271")

[node name="sword" parent="weapon" instance=ExtResource("3_frqhx")]
collision_layer = 4
collision_mask = 0

[node name="hurtTimer" type="Timer" parent="."]

[node name="playerLifeBar" type="TextureProgressBar" parent="."]
z_index = 1
offset_left = -9.0
offset_top = -22.0
offset_right = 31.0
offset_bottom = 18.0
value = 100.0
texture_under = ExtResource("5_q58xe")
texture_progress = ExtResource("6_iye2v")
